# nvim-config

./: .netrwhist  CLAUDE.md  README.md  config.vim  init.lua  init.vim  lazy-lock.json  maps.vim  plug.vim  theme.vim
analytics/: main.py
custom_ffi/: Cargo.toml  Justfile  Makefile
custom_ffi/.cargo/: config.toml
custom_ffi/src/: lib.rs
docs/: plugins.md
lua/: .luarc.json  bootstrap.lua  config.lua  disabler.lua  exports.lua  functions.lua  macro-recorder.lua  mappings.lua  markdown-tree.lua  masking.lua  post-mappings.lua  pre-mappings.lua  quickfix.lua  theme.lua  utils.lua
lua/ai/: interface.lua  prompts.lua
lua/custom/: init.lua  neovide.lua
lua/custom/os/: mac.lua  windows.lua
lua/custom/term/: kitty.lua
lua/custom/theme/: catppuccin.lua
lua/functions/: up-to-date.lua
lua/opts/: init.lua
lua/plugins/: init.lua
lua/plugins/config/: blink-cmp.lua  breadcrumbs.lua  bufferline.lua  copilot.lua  dashboard-nvim.lua  dressing.lua  flash.lua  focus.lua  gitsigns.lua  goto-preview.lua  grug-far.lua  hologram.lua  hurl.lua  indent-blankline.lua  lsp_lines.lua  lualine.lua  mason-lspconfig.lua  mason-null-ls.lua  mason.lua  noice.lua  nvim-cmp.lua  nvim-dap-ui.lua  nvim-dap.lua  nvim-notify.lua  nvim-tree.lua  nvim-treesitter-context.lua  nvim-treesitter.lua  oil.lua  overseer.lua  persistence.lua  pets.lua  quicker.lua  render-markdown.lua  telescope-fzf-native.lua  telescope.lua  themes.lua  toggleterm.lua  (+2 more)
lua/telemetry/: keybinds.lua  metrics.lua
spell/: en.utf-8.add  en.utf-8.add.spl
telemetry/: Cargo.toml  export.sh
telemetry/src/: lib.rs
(+14 files in other folders)
