[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5.1", features = ["neovim-0-10"] }
magic-map = { git = "https://github.com/NishantJoshi00/magic-map" }

rkyv = { version = "0.7.40", features = ["validation", "strict"] }
bytecheck = { version = "~0.6.8", default-features = false }
once_cell = "1.19.0"
